--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to lists_path, class: "navbar-brand" do %>
       <%= image_tag "https://media.istockphoto.com/photos/popcorn-flies-out-of-a-full-bucket-closeup-on-a-white-isolated-picture-id1164705522?k=20&m=1164705522&s=612x612&w=0&h=IyUVCFE_Fgc7DAg6MnKCKRSszb7wWoDeuMTOcJBbCuc=" %>
     <% end %>
 
@@ -13,10 +13,6 @@
         <li class="nav-item active">
           <%= link_to "My lists", lists_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Make a new list", new_list_path, class: "nav-link" %>
-        </li>
-
       </ul>
     </div>
   </div>
