--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,12 @@
 <%= render "shared/list_banner" %>
 <%= render "shared/new_bookmark_modal" %>
 <%= render "shared/movie_cards" %>
+
+
+<!--
+        <%= simple_form_for [ @list, @review ] do |f| %>
+        <%= f.input :comment %>
+        <%= f.submit "Submit review", class: "btn btn-primary" %>
+        <% end %>
+-->
+
