--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,11 +2,13 @@
 <%= render "shared/new_bookmark_modal" %>
 <%= render "shared/movie_cards" %>
 
-
-<!--
         <%= simple_form_for [ @list, @review ] do |f| %>
-        <%= f.input :comment %>
+        <%= f.input :content %>
         <%= f.submit "Submit review", class: "btn btn-primary" %>
         <% end %>
--->
 
+<ul>
+<% @reviews.each do |review| %>
+<li><%= review.content %></li>
+<% end %>
+</ul>
