--- a/app/views/shared/_list_cards.html.erb
+++ b/app/views/shared/_list_cards.html.erb
@@ -1,8 +1,10 @@
 <div class="cards">
 <% @lists.each do |list| %>
+    <h2><%= link_to list_path(list) do %></h2>
    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cloudinary_url(list.photo.key) %>)">
-    <h2><%= link_to "#{list.name}", list_path(list) %></h2>
+  <h2> <%= list.name %></h2>
   </div>
 
+  <% end %>
 <% end %>
 </div>
