--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,10 @@
+<%= render "shared/new_list_modal" %>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1517604931442-7e0c8ed2963c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);">
   <div class="container">
     <h1>  All lists </h1>
+    <h2 style="color:white; text-align:center;">Click a list to take a look - or create your own!</h2>
   </div>
 </div>
 
-<div class="new-list btn btn-success">
-  <%= link_to "Create a new list", new_list_path %>
-</div>
 
 <%= render "shared/list_cards" %>
