--- a/app/views/shared/_new_list_modal.html.erb
+++ b/app/views/shared/_new_list_modal.html.erb
@@ -2,18 +2,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add a new movie</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Add a new watchlist!</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <%= simple_form_for [ @list, @bookmark ], remote: true do |f| %>
-        <%= f.association :movie %>
-        <%= f.input :comment %>
-
-      <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
-      <h2><%= "You have errors" if @bookmark.errors.any? %></h2>
+      <%= simple_form_for(@list) do |f| %>
+  <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
+  <%= f.submit %>
       </div>
         <% end %>
     </div>
